--- a/billlist/member.html
+++ b/billlist/member.html
@@ -307,9 +307,9 @@
                     aria-labelledby="membergrid-tab"
                     tabindex="5"
                   >
-                    <div class="bill-card mb-4" onclick="window.location.href='bill_detail.html';">
+                    <div class="bill-card mb-4" >
                       <div class="bhead">
-                        <h5>Bill No - 35-0003</h5>
+                        <h5 type="button" onclick="window.location.href='bill_detail.html';">Bill No - 35-0003</h5>
                         <span class="bill-badge">BILL</span>
                       </div>
                       <p>
@@ -361,7 +361,7 @@
                     </div>
                     <div class="bill-card mb-4">
                       <div class="bhead">
-                        <h5>Bill No - 35-0003</h5>
+                        <h5 type="button" onclick="window.location.href='bill_detail.html';">Bill No - 35-0003</h5>
                         <span class="bill-badge">BILL</span>
                       </div>
                       <p>
@@ -439,7 +439,7 @@
                           <tbody>
                             <tr>
                               <td class="col-md-1 ps-3">35</td>
-                              <td class="col-md-2 bill-no ps-3">35-0003</td>
+                              <td class="col-md-2 bill-no ps-3"><a href="bill_detail.html">35-0003</a></td>
                               <td class="col-md-3">
                                 An Act apprpirating $2,900,00 to the Department
                                 of Public Works for the Construction..
@@ -452,7 +452,7 @@
                             </tr>
                             <tr>
                               <td class="col-md-1 ps-3">35</td>
-                              <td class="col-md-2 bill-no ps-3">35-0003</td>
+                              <td class="col-md-2 bill-no ps-3"><a href="bill_detail.html">35-0003</a></td>
                               <td class="col-md-3">
                                 An Act apprpirating $2,900,00 to the Department
                                 of Public Works for the Construction..
@@ -465,7 +465,7 @@
                             </tr>
                             <tr>
                               <td class="col-md-1 ps-3">35</td>
-                              <td class="col-md-2 bill-no ps-3">35-0003</td>
+                              <td class="col-md-2 bill-no ps-3"><a href="bill_detail.html">35-0003</a></td>
                               <td class="col-md-3">
                                 An Act apprpirating $2,900,00 to the Department
                                 of Public Works for the Construction..
