--- a/billlist/index.html
+++ b/billlist/index.html
@@ -458,10 +458,10 @@
                 >
                   <div class="row">
                     <div class="col-md-6 mb-4">
-                      <div class="bill-card" type="button"
-                      onclick="window.location.href='bill_detail.html';">
+                      <div class="bill-card" >
                         <div class="bhead">
-                          <h5 >Bill No - 35-0003</h5>
+                          <h5  type="button"
+                          onclick="window.location.href='bill_detail.html';">Bill No - 35-0003</h5>
                           <span class="bill-badge">BILL</span>
                         </div>
                         <p>
@@ -515,10 +515,10 @@
 
                     <!-- Copy the above block to add more cards -->
                     <div class="col-md-6 mb-4">
-                      <div class="bill-card" type="button"
-                      onclick="window.location.href='bill_detail.html';">
+                      <div class="bill-card">
                         <div class="bhead">
-                          <h5>Bill No - 35-0003</h5>
+                          <h5 type="button"
+                          onclick="window.location.href='bill_detail.html';">Bill No - 35-0003</h5>
                           <span class="bill-badge">BILL</span>
                         </div>
                         <p>
@@ -708,7 +708,7 @@
                         <tbody>
                           <tr>
                             <td class="col-md-1 ps-3">35</td>
-                            <td class="col-md-2 bill-no ps-3">35-0003</td>
+                            <td class="col-md-2 bill-no ps-3"><a href="bill_detail.html">35-0003</a></td>
                             <td class="col-md-3">
                               An Act apprpirating $2,900,00 to the Department of
                               Public Works for the Construction..
@@ -721,7 +721,7 @@
                           </tr>
                           <tr>
                             <td class="col-md-1 ps-3">35</td>
-                            <td class="col-md-2 bill-no ps-3">35-0003</td>
+                            <td class="col-md-2 bill-no ps-3"><a href="bill_detail.html">35-0003</a></td>
                             <td class="col-md-3">
                               An Act apprpirating $2,900,00 to the Department of
                               Public Works for the Construction..
@@ -734,7 +734,7 @@
                           </tr>
                           <tr>
                             <td class="col-md-1 ps-3">35</td>
-                            <td class="col-md-2 bill-no ps-3">35-0003</td>
+                            <td class="col-md-2 bill-no ps-3"><a href="bill_detail.html">35-0003</a></td>
                             <td class="col-md-3">
                               An Act apprpirating $2,900,00 to the Department of
                               Public Works for the Construction..
@@ -747,7 +747,7 @@
                           </tr>
                           <tr>
                             <td class="col-md-1 ps-3">35</td>
-                            <td class="col-md-2 bill-no ps-3">35-0003</td>
+                            <td class="col-md-2 bill-no ps-3"><a href="bill_detail.html">35-0003</a></td>
                             <td class="col-md-3">
                               An Act apprpirating $2,900,00 to the Department of
                               Public Works for the Construction..
